# lazycargo

./: Cargo.toml  README.md
src/: app.rs  main.rs  verify.rs
src/app/: command.rs  events.rs  helper.rs  render.rs
src/app/render/: command_status.rs  help_section.rs  main_panel.rs  mod.rs  popup.rs  sidebar.rs
src/dependencies/: mod.rs
src/domain/: commands.rs  mod.rs
src/domain/dependencies/: extractor.rs  mod.rs
