[package]
name = "lazycargo"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
cargo-manifest = "0.20.0"
cargofetch = "1.4.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
throbber-widgets-tui = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
tui-input = "0.15.0"
