[package]
name = "lazycargo"
description = "A terminal user interface (TUI) for Cargo, the Rust package manager."
version = "0.1.0"
edition = "2024"
authors = ["Arjav Jain <arjavjain0703@gmail.com>"]
repository = "https://github.com/arjav0703/lazycargo"
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
ansi-to-tui = "8.0.1"
cargo-manifest = "0.20.0"
cargofetch = "1.4.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
throbber-widgets-tui = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
tui-big-text = "0.8.2"
tui-input = "0.15.0"
